[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Elevator_inside-1.png.png" type="Texture" id=1]
[ext_resource path="res://Scripts/elevator.gd" type="Script" id=2]
[ext_resource path="res://Assets/Elevator_door_close-1.png.png" type="Texture" id=3]

[sub_resource type="Animation" id=5]
resource_name = "elevator_close"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]
resource_name = "elevator_open"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 67.2577, 31.8953 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.2324, 30.0075 )

[node name="Elevator" type="Node2D"]
script = ExtResource( 2 )

[node name="Inside_elevator" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 10
texture = ExtResource( 3 )
hframes = 12
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/elevator_close = SubResource( 5 )
anims/elevator_open = SubResource( 6 )

[node name="Door Open Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door Open Area"]
position = Vector2( 42.9463, 0.471939 )
shape = SubResource( 3 )

[node name="Elevator Start Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elevator Start Area"]
position = Vector2( -5.19131, 0.943878 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Door Open Area" to="." method="_on_Door_Open_Area_body_entered"]
[connection signal="body_exited" from="Door Open Area" to="." method="_on_Door_Open_Area_body_exited"]
[connection signal="body_entered" from="Elevator Start Area" to="." method="_on_Elevator_Start_Area_body_entered"]
[connection signal="body_exited" from="Elevator Start Area" to="." method="_on_Elevator_Start_Area_body_exited"]
